--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
     <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <title>Humans vs Machines Blog</title>
+      <title>Humans and Machines Blog</title>
     </head>
     <body>
     <!-- This was adapted from: http://blog.udacity.com/2016/03/humans-vs-machines-an-ai-odyssey-2.html -->
     <!-- Format this text to match the mockup exactly! -->
     <h1>
-      Humans vs. Machines: An AI Odyssey
+      Humans and Machines: An AI Odyssey
     </h1>
   <p>
     By
