--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p>
     <i>
     <b>
-      ***Breaking News: AlphaGo has won the first two matches!***
+     <h1> ***Breaking News: AlphaGo has won the first two matches!*** </h1>
     </b>
       In this, the third in our series on the epic Go matches being played between AlphaGo (Google’s Artificial Intelligence software) and Lee Se-Dol (Current Go World Champion), we look at the history of Humans vs. Machines, and the innovations that have led us to this incredible moment in time.
     </i>
