--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- This was adapted from: http://blog.udacity.com/2016/03/humans-vs-machines-an-ai-odyssey-2.html -->
     <!-- Format this text to match the mockup exactly! -->
     <h1>
-      Humans and Machines: An AI Odyssey
+      Humans and Machines
     </h1>
   <p>
     By
